--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,12 @@
     "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "angular-eslint": "20.4.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "8.46.0"
   }
 }
