--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@fontsource/atkinson-hyperlegible": "^5.2.8",
+    "@fontsource/atkinson-hyperlegible-mono": "^5.2.10",
+    "@fontsource/nunito-sans": "^5.2.7",
     "@tailwindcss/postcss": "^4.1.16",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
