added dependency tsdav

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.16",
+    "tsdav": "^2.1.6",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
