--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@angular/build": "^20.3.7",
     "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.0",
+    "@angular/localize": "^20.3.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "angular-eslint": "20.4.0",
     "eslint": "^9.37.0",
