--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -4,117 +4,121 @@
   "newProjectRoot": "projects",
   "projects": {
     "frontend": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
-          "skipTests": true
-        },
-        "@schematics/angular:class": {
-          "skipTests": true
-        },
-        "@schematics/angular:directive": {
-          "skipTests": true
-        },
-        "@schematics/angular:guard": {
-          "skipTests": true
-        },
-        "@schematics/angular:interceptor": {
-          "skipTests": true
-        },
-        "@schematics/angular:pipe": {
-          "skipTests": true
-        },
-        "@schematics/angular:resolver": {
-          "skipTests": true
-        },
-        "@schematics/angular:service": {
-          "skipTests": true
-        }
-      },
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular/build:application",
-          "options": {
-            "loader": {
-              ".woff": "file",
-              ".woff2": "file"
-            },
-            "browser": "src/main.ts",
-            "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css",
-              "@fontsource/atkinson-hyperlegible-mono/400.css",
-              "@fontsource/atkinson-hyperlegible-mono/700.css",
-              "@fontsource/atkinson-hyperlegible/400.css",
-              "@fontsource/atkinson-hyperlegible/700.css",
-              "@fontsource/nunito-sans/400.css",
-              "@fontsource/nunito-sans/700.css"
-            ],
-            "polyfills": [
-              "@angular/localize/init"
-            ]
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
-                }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular/build:dev-server",
-          "configurations": {
-            "production": {
-              "buildTarget": "frontend:build:production"
-            },
-            "development": {
-              "buildTarget": "frontend:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular/build:extract-i18n"
-        },
-        "lint": {
-          "builder": "@angular-eslint/builder:lint",
-          "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
-          }
-        }
-      }
-    }
+		"projectType": "application",
+		"schematics": {
+			"@schematics/angular:component": {
+				"inlineTemplate": true,
+				"inlineStyle": true,
+				"skipTests": true
+			},
+			"@schematics/angular:class": {
+				"skipTests": true
+			},
+			"@schematics/angular:directive": {
+				"skipTests": true
+			},
+			"@schematics/angular:guard": {
+				"skipTests": true
+			},
+			"@schematics/angular:interceptor": {
+				"skipTests": true
+			},
+			"@schematics/angular:pipe": {
+				"skipTests": true
+			},
+			"@schematics/angular:resolver": {
+				"skipTests": true
+			},
+			"@schematics/angular:service": {
+				"skipTests": true
+			}
+		},
+		"root": "",
+		"sourceRoot": "src",
+		"prefix": "app",
+		"architect": {
+			"build": {
+				"builder": "@angular/build:application",
+				"options": {
+					"localize": true,
+					"loader": {
+						".woff": "file",
+						".woff2": "file"
+					},
+					"browser": "src/main.ts",
+					"tsConfig": "tsconfig.app.json",
+					"assets": [
+						{
+							"glob": "**/*",
+							"input": "public"
+						}
+					],
+					"styles": [
+						"src/styles.css",
+						"@fontsource/atkinson-hyperlegible-mono/400.css",
+						"@fontsource/atkinson-hyperlegible-mono/700.css",
+						"@fontsource/atkinson-hyperlegible/400.css",
+						"@fontsource/atkinson-hyperlegible/700.css",
+						"@fontsource/nunito-sans/400.css",
+						"@fontsource/nunito-sans/700.css"
+					],
+					"polyfills": ["@angular/localize/init"]
+				},
+				"configurations": {
+					"production": {
+						"budgets": [
+							{
+								"type": "initial",
+								"maximumWarning": "500kB",
+								"maximumError": "1MB"
+							},
+							{
+								"type": "anyComponentStyle",
+								"maximumWarning": "4kB",
+								"maximumError": "8kB"
+							}
+						],
+						"outputHashing": "all"
+					},
+					"development": {
+						"optimization": false,
+						"extractLicenses": false,
+						"sourceMap": true
+					}
+				},
+				"defaultConfiguration": "production"
+			},
+			"serve": {
+				"builder": "@angular/build:dev-server",
+				"configurations": {
+					"production": {
+						"buildTarget": "frontend:build:production"
+					},
+					"development": {
+						"buildTarget": "frontend:build:development"
+					}
+				},
+				"defaultConfiguration": "development"
+			},
+			"extract-i18n": {
+				"builder": "@angular/build:extract-i18n"
+			},
+			"lint": {
+				"builder": "@angular-eslint/builder:lint",
+				"options": {
+					"lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+				}
+			}
+		},
+		"i18n": {
+			"sourceLocale": "en",
+			"locales": {
+				"de": {
+					"translation": "src/locale/messages.de.xlf"
+				}
+			}
+		}
+	}
   },
   "cli": {
     "schematicCollections": [
