--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,6 +7,12 @@ events {
 }
 
 http {
+	# Browser preferred language detection (does NOT require    # AcceptLanguageModule)
+	map $http_accept_language $accept_language {
+		~*^de de;
+		~*^en en;
+	}
+
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -41,6 +47,8 @@ http {
         font/otf
         image/svg+xml;
 
+	absolute_redirect off;
+
     server {
         listen       8080;
         server_name  localhost;
@@ -48,10 +56,18 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Angular Routing
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+        # Fallback to default language if no preference defined by browser
+        if ($accept_language ~ "^$") {
+			set $accept_language "en";
+		}
+
+		rewrite ^/$ /$accept_language redirect;
+
+        # Everything under the Angular application is always redirected to Angular in the
+        # correct language
+        location ~ ^/(de|en) {
+			try_files $uri /$1/index.html?$args;
+		}
 
         # Static Assets Caching
         location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|map)$ {
