--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "i18n": "ng extract-i18n",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
